# mv-2

./: .gitignore  README.md  bun.lockb  package-lock.json  package.json  tsconfig.json  vite.config.ts
analyzer/: Cargo.toml
analyzer/src/: lib.rs
src/: app.d.ts  app.html  constants.ts  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AudioPlayer.svelte  Background.svelte  Buttons.svelte  ComponentEditor.svelte  Cover.svelte  Progress.svelte  Sound.svelte  Visualizer-old.svelte  Visualizer.svelte
src/components/Details/: Details.svelte  Marquee.svelte  Text.svelte
src/components/buttons/: Button.svelte
src/lib/: getFlacMetadata.ts  store.ts  types.ts  util.ts
src/lib/Gradient/: Gradient.js  Gradient.ts  MiniGl.js  index.d.ts  index.ts
src/lib/Gradient/shaders/: vertexShader.glsl
src/lib/components/: AudioPlayer.svelte  Background.svelte  Cover.svelte  Dot.svelte  Visualizer.svelte
src/lib/components/Player/: Cover.svelte  MoreButton.svelte  Progress.svelte  Sound.svelte
src/lib/components/Player/PlaybackButtons/: PlaybackButton.svelte  PlaybackButtons.svelte
src/lib/components/Player/TitleArtist/: Marquee.svelte  Marquee2.svelte  MarqueeController.svelte  Text.svelte  TitleArtist.svelte
src/lib/components/ui/: Bar.svelte  Button.svelte
src/lib/pkg/: analyzer.d.ts  analyzer.js  analyzer_bg.js  analyzer_bg.wasm  analyzer_bg.wasm.d.ts
src/lib/utils/: util.ts
src/lib/utils/metadata/: getFlacMetadata.ts  getMp3Metadata.ts  getOtherMetadata.ts
src/routes/: +page.svelte
(+3 files in other folders)
