[package]
name = "analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

# [profile.release]
# lto = true
# strip = true

[dependencies]
wasm-bindgen = "=0.2.90"
audiotags = "0.4.1"